add: club/:id endpoint
